# bills-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
bills_hooks/: __init__.py
bills_hooks/_logging/: logger.yaml
bills_hooks/check_filename_pattern/: hook.py
bills_hooks/gitmoji_conventional_commit/: _dev.py  _emoji.py  hook.py
bills_hooks/pre_commit_validate/: hook.py  model.py
bills_hooks/tidy_gitkeep/: hook.py
src/bills_hooks/: __init__.py  check_no_commit_comment.py  tidy_gitkeep.py
src/bills_hooks/_logging/: logger.py
src/bills_hooks/banned_python_code/: hook.py
src/bills_hooks/check_dbt_project_version/: hook.py
src/bills_hooks/check_filename_pattern/: hook.py
src/bills_hooks/check_no_commit_comment/: hook.py
src/bills_hooks/gitmoji_conventional_commit/: _dev.py  gitmojis.yaml  hook.py
tests/: conftest.py  test__banned_python_code.py  test__check_dbt_project_version.py  test__check_filename_pattern.py  test__check_no_commit_comment.py  test__scripts.py
tests/banned_python_code/: test__hook.py
tests/check_dbt_project_version/: test__hook.py
tests/check_filename_pattern/: test__hook.py
tests/check_no_commit_comment/: test__hook.py
tests/gitmoji_conventional_commit/: test__dev.py  test__hook.py
tests/pre_commit_validator/: test__hook.py
tests/pre_commit_validator/fixtures/: invalid.pre-commit-config.yaml  valid.1.pre-commit-config.yaml  valid.2.pre-commit-config.yaml
tests/tidy_gitkeep/: test__hook.py  test__tidy_gitkeep.py
tests/tidy_gitkeep/fixtures/template/subdir-3/subdir-5/: .gitkeep
