[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bills-hooks"
version = "0.0.3"
description = "Pre-commit hooks for my own projects."
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.0",
]

[project.scripts]
gitmoji-conventional-commit = "bills_hooks.gitmoji_conventional_commit.hook:main"
tidy-gitkeep = "bills_hooks.tidy_gitkeep.hook:main"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[tool.setuptools]
packages = [
    "bills_hooks.gitmoji_conventional_commit",
    "bills_hooks.tidy_gitkeep",
]


[tool.pytest.ini_options]
addopts = "--cov=bills_hooks --cov-fail-under=80"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
