# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "bills-hooks"
version = "0.0.15"
description = "Pre-commit hooks for my own projects."
authors = [{name = "billwallis"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "identify>=2.6.16",
    "pyyaml>=6.0.0",
]

[project.scripts]
banned-python-code = "bills_hooks.banned_python_code:main"
_check-dbt-project-version-warning = "bills_hooks.check_dbt_project_version:warn"
check-dbt-project-version = "bills_hooks.check_dbt_project_version:main"
check-filename-pattern = "bills_hooks.check_filename_pattern:main"
check-no-commit-comment = "bills_hooks.check_no_commit_comment:main"
gitmoji-conventional-commit = "bills_hooks.gitmoji_conventional_commit.hook:main"
tidy-gitkeep = "bills_hooks.tidy_gitkeep:main"

[dependency-groups]
dev = [
    "astpretty>=3.0.0",
    "poethepoet>=0.46.0",
    "pre-commit>=4.6.0",
]
test = [
    "coverage>=7.13.5",
    "covdefaults>=2.3.0",
    "pytest>=9.0.3",
]


[tool.uv]
default-groups = "all"


[tool.poe]
verbosity = -1
envfile.optional = ".env"

[tool.poe.tasks]
install.shell = """
    uv sync --refresh
    uv run pre-commit install --install-hooks
"""
upgrade.shell = """
    uv sync --refresh --upgrade
    uv run pre-commit autoupdate
"""
test.shell = """
    uv run coverage run -m pytest -vvv
    uv run coverage report --no-skip-covered
    uv run coverage xml --quiet
"""

[tool.poe.tasks.lint]
control.expr = "sys.platform"

[[tool.poe.tasks.lint.switch]]
case = "win32"
shell = """
    echo '=== pre-commit checks ==='
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-commit
    echo '=== pre-push checks ==='
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-push
"""

[[tool.poe.tasks.lint.switch]]
shell = """
    echo '\\033[0;34mpre-commit checks\\033[0m'
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-commit
    echo '\\033[0;34mpre-push checks\\033[0m'
    SKIP=identity uv run pre-commit run --all-files --hook-stage pre-push
"""


[tool.pytest.ini_options]
# `basetemp` is relative to the working directory, so make sure you run
# pytest from the root of the project.
addopts = "--basetemp=tests-temp/"
testpaths = ["tests"]

[tool.coverage]
run.plugins = ["covdefaults"]  # https://youtu.be/70T6OxKwxm0
report.fail_under = 100
report.exclude_lines = [
    "@pytest.mark.skip",
    "@pytest.mark.xfail",
]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "E",     # pycodestyle-error
    "F",     # Pyflakes
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "W",     # pycodestyle-warning
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments in function definition
]
